add some links, internal and external

--- a/recoltes-et-semailles/part-0-epilogue/21.md
+++ b/recoltes-et-semailles/part-0-epilogue/21.md
@@ -14,7 +14,7 @@ There is still another reason, doubtlessly, that contributes to give me this sen
 One may also call this the _gift of solitude_.
 
 
-<sup>77</sup>(&ast;) Ever since I was a kid, I was never very hooked on history (nor on geometry for that matter). (In the fifth part of Récoltes et Semailles (only partially written), I have the occasion "by passing" to detect what seems to me the profound reason behind this partial "block" toward history &mdash; a block which is on its way to resorb, I believe, in recent years.) The mathematical education received by my elders, in the "Bourbakian circle", has besides not acted to settle things &mdash; the occasional historical references there were more than rare.
+<sup>77</sup>(&ast;) Ever since I was a kid, I was never very hooked on history (nor on geometry for that matter). (In the fifth part of Récoltes et Semailles (only partially written)<sup>[[doesn't seem to exist](https://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/Spirituality/Spirituality23.pdf)]</sup>, I have the occasion "by passing" to detect what seems to me the profound reason behind this partial "block" toward history &mdash; a block which is on its way to resorb, I believe, in recent years.) The mathematical education received by my elders, in the "Bourbakian circle", has besides not acted to settle things &mdash; the occasional historical references there were more than rare.
 
 <sup>78</sup>(&ast;) The hours after writing these lines, I was struck that I did not contemplate here the vast synthesis of contemporary mathematicians that strives to present the (collective) treatise of N. Bourbaki. (There will be more abundantly a question about the Bourbaki group in the first part of Récoltes et Semailles.) This is due, it seems to me, to two reasons:
 
@@ -26,7 +26,7 @@ It has, on the other hand, fixed a language and, at the same time, a certain _st
 
 <sup>79</sup>(&ast;) Evariste Galois (1811-1832) died in a duel, at the age of twenty-one. There are, I think, many biographies of him. I read as a young man a romanticized biography, written by the physicist Infeld, that made a big impression on me at the time.
 
-<sup>80</sup>(&ast;&ast;) See "The heritage of Galois" (ReS I, section 7).
+<sup>80</sup>(&ast;&ast;) See "The legacy of Galois" ([ReS I, section 7](../part-1/7.md)).
 
 <sup>81</sup>(&ast;&ast;&ast;)
 
