add another link

--- a/recoltes-et-semailles/part-0-epilogue/21.md
+++ b/recoltes-et-semailles/part-0-epilogue/21.md
@@ -16,7 +16,7 @@ One may also call this the _gift of solitude_.
 
 <sup>77</sup>(&ast;) Ever since I was a kid, I was never very hooked on history (nor on geometry for that matter). (In the fifth part of Récoltes et Semailles (only partially written)<sup>[[doesn't seem to exist](https://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/Spirituality/Spirituality23.pdf)]</sup>, I have the occasion "by passing" to detect what seems to me the profound reason behind this partial "block" toward history &mdash; a block which is on its way to resorb, I believe, in recent years.) The mathematical education received by my elders, in the "Bourbakian circle", has besides not acted to settle things &mdash; the occasional historical references there were more than rare.
 
-<sup>78</sup>(&ast;) The hours after writing these lines, I was struck that I did not contemplate here the vast synthesis of contemporary mathematicians that strives to present the (collective) treatise of N. Bourbaki. (There will be more abundantly a question about the Bourbaki group in the first part of Récoltes et Semailles.) This is due, it seems to me, to two reasons:
+<sup>78</sup>(&ast;) The hours after writing these lines, I was struck that I did not contemplate here the vast synthesis of contemporary mathematicians that strives to present the (collective) treatise of N. Bourbaki. (There will be more abundantly a question about the Bourbaki group in the [first part](../table-of-contents.md#part-1) of Récoltes et Semailles.) This is due, it seems to me, to two reasons:
 
 Firstly, this synthesis is confined to a sort of "putting things in order" of a vast set of ideas and results already known, without bringing any new ideas with it. If there is a new idea, this would be that of a mathematically precise definition of the notion of "structure", which has proven to be a valuable guiding thread throughout the treatise. But this idea seems to me to rather resemble that of an intelligent and imaginative dictionary writer, than an element of renewal of a language, giving a renewed apprehension of reality (here, of the mathematical one).
 
