--- a/recoltes-et-semailles/part-0-epilogue/21.md
+++ b/recoltes-et-semailles/part-0-epilogue/21.md
@@ -7,12 +7,17 @@ Of course, between the epoch of Pythagoras and Euclid and the beginning of the 1
 
 It really seems like as much as a servant of a vast unifying vision was born in me, I am "one of a kind" in the history of mathematics from the beginnings to the present day. Sorry for having the air of wanting to distinguish myself more than what seems allowed! To my own relief, I believe however to discern a sort of potential _brother_ (and providential!). I have already sometimes had the occasion to evoke him, as the first in a line of "brothers in temperament": _Evariste Galois_. In his short and dazzling life<sup>79</sup>(&ast;), I believe to discern the primer of a grand vision &mdash; of precisely a "wedding of number and magnitude", in a new geometric vision. I recall elsewhere in Récoltes et Semailles<sup>80</sup>(&ast;&ast;) how, two years ago, this sudden intuition appeared to me: that in the mathematical work that at this moment exercised on me the most powerful fascination, I was on my way to "resume the legacy of Galois". This intuition, rarely evoked since, has however had its time to ripen in silence. The retrospective reflection on my work that I pursue since three weeks will surely also have contributed. The very direct filiation that I believe to recognize at the present with a mathematician of the past, is that which connects me to Evariste Galois. Right or wrong, to me it seems like this vision that I have developed for fifteen years of my life, and that has continued still to ripen in me and to be enriched during the sixteen years elapsed since my departure from the mathematical scene &mdash; that this vision is also that which Galois couldn't have avoided to develop <sup>81</sup>(&ast;&ast;&ast;), if he had been around in my place, and if an early death had not come to brutally cut short this magnificent spirit.
 
-There is still another reason, doubtlessly, that contributes to give me this sentiment of an "essential kinship" &mdash; of a kinship which does not reduce to a single "mathematical temperament", nor to prominent aspects of a work. Between his life and mine, I sense also a kinship of destiny. Surely, Galois died stupidly, at the age of 21 years, while I am approaching my sixties, and well determined to make old bones. That does not prevent however that Evariste Galois [...]
+There is still another reason, doubtlessly, that contributes to give me this sentiment of an "essential kinship" &mdash; of a kinship which does not reduce to a single "mathematical temperament", nor to prominent aspects of a work. Between his life and mine, I sense also a kinship of destiny. Certainly, Galois died stupidly, at the age of 21 years, whereas I myself am approaching my sixties, and well determined to make old bones. That does not prevent however that Evariste Galois remained during his lifetime, just like me a century and a half too late, a _"marginal"_ in the official mathematical world. In the case of Galois, it could seem in a way superficial that this marginality was "accidental", that again he simply did not have the time to "impose himself" with his new ideas and his works. In my case, my marginality, during the first three years of my life as a mathematician, were due to my ignorance (deliberate perhaps...) of the very existence of a world of mathematicians, which I would have to confront; and since my departure from the mathematical scene, sixteen years ago, it is the consequence of a deliberate choice. It is this choice, surely, which has provoked in reprisal a "collective will without flaws" to erase from mathematics every trace of my name, and with it also the vision whose servant I made myself.
 
-[...]
+But beyond these accidental differences, I believe to discern in this "marginality" a common cause, which I sense to be essential.  This cause, I don't see in historical circumstances, nor in particularities of "temperament" or "character" (which without doubt differ as much between him and me as is possible between two people), and I see it still less certainly at the level of "gifts" (clearly prodigious in Galois, and relatively modest in me). If there is indeed an "essential kinship", I see it at a much more humble, more elementary level.
+
+I have felt such a kinship on a few rare occasions in my life. It is through this kinship that I feel as "close" to another mathematician again, as to my elder: _Claude Chevalley_<sup>82</sup>(&ast;). The connection that I mean is that of a certain "naiveté", or of an "innocence", of which I have had the occasion to speak. It expresses itself by a propension (often underappreciated by the people around) to regard things with their own eyes, rather than through patented glasses, graciously offered by some more or less vast group of humans, vested with authority for one reason or the other.
+
+This "propension", or this internal attitude, is not only the privilege of maturity, but indeed that of infancy. It is a gift received at birth, at the same time as life &mdash; a humble and formidable gift. A gift often deeply buried, which some people have known to preserve a tiny bit, or maybe to rediscover...
 
 One may also call this the _gift of solitude_.
 
+---
 
 <sup>77</sup>(&ast;) Ever since I was a kid, I was never very hooked on history (nor on geometry for that matter). (In the fifth part of Récoltes et Semailles (only partially written)<sup>[[doesn't seem to exist](https://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/Spirituality/Spirituality23.pdf)]</sup>, I have the occasion "by passing" to detect what seems to me the profound reason behind this partial "block" toward history &mdash; a block which is on its way to resorb, I believe, in recent years.) The mathematical education received by my elders, in the "Bourbakian circle", has besides not acted to settle things &mdash; the occasional historical references there were more than rare.
 
@@ -28,6 +33,6 @@ It has, on the other hand, fixed a language and, at the same time, a certain _st
 
 <sup>80</sup>(&ast;&ast;) See "The legacy of Galois" ([ReS I, section 7](../part-1/7.md)).
 
-<sup>81</sup>(&ast;&ast;&ast;)
+<sup>81</sup>(&ast;&ast;&ast;) I am also persuaded that Galois would have gone much further than I have. On the one hand because of his absolutely exceptional gifts (that I haven't got a share of, for my part). On the other hand because he probably wouldn't have, like to me, let himself be distracted with the most part of his energy, on endless minor formatting tasks, bit by bit, on that which is already more or less aquired...
 
-<sup>82</sup>(&ast;)
+<sup>82</sup>(&ast;) I am speaking of Claude Chevalley here and there in Récoltes et Semailles, and more specifically in the section "Rencontre avec Claude Chevalley &mdash; ou liberté et bons sentiments" (ReS I section 11), and in the note "Un adieu à Claude Chevalley" (ReS III, note n&deg; 100).
