continue the section about Galois

--- a/recoltes-et-semailles/part-1/7.md
+++ b/recoltes-et-semailles/part-1/7.md
@@ -1,5 +1,13 @@
 ### 7. The legacy of Galois
-It would seem that among all the natural sciences, it isn't in mathematics that that which I have called "the dream", or "the [...] dream", is hit like something apparently absolutely disallowed, more than two times per millennium. In the other sciences, including the sciences reputed as "exact" such as physics, the dream is at least tolerated, seen encouragingly (according to the epoches), under names it is very "sortable" as: "speculations", "hypotheses" (such as the famous "atomic hypothesis", issued by a dream, if we neglect a speculation by Democritus), "theories"... The passage from a status of dream-whose-name-we-dare-not-say to that of "scientific truth" is done by insensible degrees, by a consensus that grows progressively. In mathematics on the other hand, it's almost always (nowadays at least) about a sudden transformation, by virtue of the waving of a magic wand of a _demonstration_ (<sup>4</sup>).
+It would seem that among all the natural sciences, it isn't only in mathematics that this which I have called "the dream", or "the waking dream", is struck down like something seemingly absolutely forbidden, if more than two times per millennium. In the other sciences, including the sciences reputed as "exact" such as physics, the dream is at least tolerated, seen encouragingly (depending on the period), by name it is more "proper" [fr: sortables] as: "speculations", "hypotheses" (such as the famous "atomic hypothesis", issued by a dream, if we neglect a speculation by Democritus), "theories"... The passage from a status of dream-whose-name-we-dare-not-say to that of "scientific truth" is done by insensible degrees, by a consensus that grows progressively. In mathematics on the other hand, it's almost always (nowadays at least) about a sudden transformation, by virtue of the waving of a magic wand of _proof_ [fr: demonstration] (<sup>4</sup>). In times when the notion of mathematical definition and of demonstration didn't exist, like they do today, clear and the object of a (more or less) general consensus, there were however visibly important notions that had an ambiguous existence &mdash; like that of "negative" number (rejected by Pascal) or that of "imaginary" number. This ambiguity reflects itself in the language in use still today.
+
+The progressive clarification of notions of definition, statement, proof, of mathematical theory, has in this regard been very beneficial. It has made us conscious of all the power of tools, of a childish simplicity however, by which we arrange to formulate with perfect precision even that which may seem informulable &mdash; by the sole virtue of a sufficiently rigorous use of everyday language, more or less. If there is something that has fascinated me in mathematics since my childhood, it is precisely this power to surround with words, and to express in a perfect manner, the essence of those mathematical things which at first sight present themselves in a form so elusive, or so mysterious, that they seem beyond words...
+
+An annoying psychological aftereffect however of this power, of resources that offer perfect precision and demonstration, is that they have accentuated again the traditional taboo regarding the "mathematical dream"; that is to say regarding all that which doesn't present itself by conventional standards of precision ([...] at the expense of a vaster vision), guaranteed to be "dyed in the wool" [fr: bon teint] by formal proof, or if not (and more and more by the passing of time...) by sketches of proof, supposed able to be formalized. Occasional _conjectures_ are tolerated as rigorous, provided that they satisfy a of conditions of precision of a questionnaire, where the only allowed answers are "yes" or "no". (And as a further condition, one must add, [...].) To my knowledge, there has been no example of a development, called "experimental", of a mathematical theory which was explicitly conjectural in its essential parts. It is true that following the modern canons, the whole calculus of the "infinitely small" developed at the end of the 17th century, which later became the differential and integal calculus, would take the face of a waking dream, which would finally be transformed into serious mathematics only two centuries later, by Cauchy's waving of the magic wand. And this brings me forcefully back to the memory of the waking dream of _Evariste Galois_, who was not so lucky with the same Cauchy<sup>; but less than a hundred years sufficed this time for another waving of the wand, of Jordan this time (if I remember correctly), giving the right to cite this dream, rebaptised for the circumstances as "Galois theory".
+
+The remark which draws itself out from all of this, and which is not to the advantage of "mathematics in 1984", is that it is fortunate that people like Newton, Leibniz, Galois (and I have surely passed over many, not being knowledgeable in history...) were not burdened by our current canon, in a time when they contented themselves to discover without taking the leisure to canonize!
+
+The example of Galois, come here without my calling for it, touches in me a sensitive chord. I seem to remember that a sentiment of brotherly sympathy in his regard awakened since the first time when I heard talk about him and his strange destiny, at a time when I was still a student at a lycée or university, I believe. Like him, I sensed in me a passion for mathematics &mdash; and like him I felt like a misfit, a stranger in the "high society" which (it seemed to me) he had rejected. I ended up myself however being part of this high society, to quit it one day, without regrets... This a little forgotten affinity reappeared only recently and during an entirely new day, as I was writing "Sketch of a Programme" (at the occasion of my demand for admission as a researcher at the Centre National de la Recherche Scientifique). The report is dedicated principally to a sketch of my principal themes of reflection since about 10 years. [...]
 
 [...]
 
