correct 'ancient' -> 'old'

--- a/recoltes-et-semailles/part-0-epilogue/19.md
+++ b/recoltes-et-semailles/part-0-epilogue/19.md
@@ -13,7 +13,7 @@ In the preceeding image, it is besides not of _one_ kid who we should speak, lik
 
 <sup>66</sup>(&ast;) My initial intention, when writing the Epilogue, was to include a very brief sketch of some of these "profound changes", and to make apparent this "essential continuity" as I see it. I gave up, in order not to lengthen beyond measure this Promenade, which is already much longer than planned. I'm thinking of coming back to this in the Historical Comments planned for volume 4 of the "Reflections", with the intention this time of a mathematical reader (this changes the task of exposition completely).
 
-<sup>67</sup>(&ast;) This affirmation (which seems peremptory to some) is to be taken with a "grain of salt". It is not more, not less valid than (that of which I resume my account below) the "Newtonian model" of mechanics (terrestrial or celestial) having been "dying" at the beginning of the century, when Einstein came to the rescue. It is in fact that still today, in most "current" situations in physics, the Newtonian model is perfectly adequate, and it would be folly (seeing the margin of error admitted in the measurements made) to go searching for relativistic models. Likewise, in the numerous situations in mathematics, the familiar ancient notions of "space" and of "variety" remain perfectly adequate, without going to look for nilpotent elements, for toposes or for "moderated structures". But in one case and another, for a growing number of contexts taking part in cutting-edge research, the ancient conceptual bodies have become inept for expressing the same but more "current" situations.
+<sup>67</sup>(&ast;) This affirmation (which seems peremptory to some) is to be taken with a "grain of salt". It is not more, not less valid than (that of which I resume my account below) the "Newtonian model" of mechanics (terrestrial or celestial) having been "dying" at the beginning of the century, when Einstein came to the rescue. It is in fact that still today, in most "current" situations in physics, the Newtonian model is perfectly adequate, and it would be folly (seeing the margin of error admitted in the measurements made) to go searching for relativistic models. Likewise, in the numerous situations in mathematics, the familiar old notions of "space" and of "manifold" remain perfectly adequate, without going to look for nilpotent elements, for toposes or for "moderated structures". But in one case and another, for a growing number of contexts taking part in cutting-edge research, the old conceptual bodies have become inept for expressing the same but more "current" situations.
 
 <sup>68</sup>(&ast;) (Intended for the mathematician) To this "progenitor", I count notably the formal schemes, the "multiplicities" of all kinds (and notably, the schematic multiplicities, or formal ones), as well as the spaces called "rigid analytic" (introduced by Tate, following a "main contractor" provided by me, inspired by the new notion of topos, at the same time as that of formal schemes). This list is anyway not remotely exhaustive...
 
