--- a/recoltes-et-semailles/part-0-epilogue/20.md
+++ b/recoltes-et-semailles/part-0-epilogue/20.md
@@ -24,7 +24,7 @@ And this "probabilistic cloud", replacing the reassuring material particles of y
 
 <sup>73</sup>(&ast;) One has dubbed "unitary theory" such a hypothetical theory, which would arrive to "unify" and conciliate the multitude of partial theories which are in question. I have a feeling that the fundamental reflection which is waiting to be undertaken, will have to take place at two different levels.
 
-1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible cercle", that has replaced the ancient metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of the consensus there is not obvious. There are even very serious philosophical reasons, that [...]
+1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible cercle", that has replaced the old metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of the consensus there is not obvious. There are even very serious philosophical reasons, that [...]
 
 2&deg;) Only _after_ such a reflection, it seems to me, does the "technical" question of bringing out an explicit model, more satisfactory than its predecessors, make complete sense. This would be the moment then, maybe, to free oneself of a second tacit axiom of the physician, going back to antiquity, this axiom, and being profoundly anchored in our mode of perception even of space: it is that of the _continuous nature_ of space and time (or of space-time), of the "place" therefore where "physical phenomena" unfold.
 
