work on section 3 of the letter

--- a/recoltes-et-semailles/part-0-letter/3.md
+++ b/recoltes-et-semailles/part-0-letter/3.md
@@ -1,7 +1,15 @@
 ### 3. The boss is dead &mdash; abandoned building sites
 It is time, I feel, to give some explanations: why I quit so abruptly a world in which, apparently, I felt at ease for tweny years of my life; why I had the strange idea to come back (like a zombie...) when things had been going well without me these fifteen years; and finally why an introduction to a mathematical work of six or seven hundred pages ended up at twelve (or fourteen) hundred. And it is here also, when entering into the heart of the matter, that I will without doubt worry you (sorry!), even annoy you. For no doubt that, like me long ago, you want to see "in pink" the environment of which you are a part, where you have your place, your name and all that. I know what it is... And there, it will squeak a little...
 
-I talk here and there in Récoltes et Semailles of the episode of my departure, without stopping too much. The "departure" there appears rather like an important caesura in my life as a mathematician &mdash; it is in relation to this "point" that the events of my life as a mathematician constantly situate themselves, as "before" and "after". A shock of great force was needed to tear myself away from an environment where I was strongly rooted, and from a "trajectory" which had been heavily drawn. The shock came from the confrontation, in an environment with which I was strongly identified, with a certain form of corruption<sup>85</sup>(*), from which I had until then chosen to look away (by simply abstaining from participating). With the retreat, I realized that beyond the event, there was however a very profound force at work in me. It was an intense _need for internal renewal_. Such a renewal couldn't be accomplished and pursued in the tepid ambiance of the scientific drying oven of a high standard institution.
+I talk here and there in Récoltes et Semailles of the episode of my departure, without stopping too much. The "departure" there appears rather like an important caesura in my life as a mathematician &mdash; it is in relation to this "point" that the events of my life as a mathematician constantly situate themselves, as "before" and "after". A shock of great force was needed to tear myself away from an environment where I was strongly rooted, and from a "trajectory" which had been heavily drawn. The shock came from the confrontation, in an environment with which I was strongly identified, with a certain form of corruption<sup>85</sup>(*), from which I had until then chosen to look away (by simply abstaining from participating). With the retreat, I realized that beyond the event, there was however a very profound force at work in me. It was an intense _need for internal renewal_. Such a renewal couldn't be accomplished and pursued in the tepid ambiance of the scientific drying oven of a high standard institution. Behind me, twenty years of intense mathematical creativity and exaggerated mathematical commitment &mdash; and, at the same time, twenty long years of spiritual stagnation, in "isolation" [fr: vase clos]... Without realizing, I choked &mdash; it is the air of the open sea that I needed! My providential "departure" marked the sudden end of a long stagnation, and a first step toward an equilibration of profound forces in my being, folded and aimed in a state of intense disequilibrium, frozen... The departure was, truly, a _fresh start_ [fr: nouveau départ] &mdash; the first step in a new voyage...
+
+Like I said, my mathematical passion was not put out, despite all this. It found expression in reflections which had remained sporadically, in ways very different from those that I had traced out "before". As for the _work_ that I left behind me, that "of before", as many published black on white as those, more essentially perhaps, that had still not found their way into writing or publication &mdash; it may well seem, and indeed it seems to me, that it was detached from me. Until last year, with Récoltes et Semailles, the idea never occured to be to "ask" as much as a little about the scattered echoes that had come back to me, here and there. I knew well that all that which I had done in math, and in particular, during my "geometric" period from 1955 to 1970, were things that _had_ to be done &mdash; and the things which I had seen or interview, were things that _had_ to appear, that _needed_ to be drawn into broad daylight. And also, that the work which I'd done, and that which I'd had made, was a job well done, a work into which I had put myself entirely. I put all my force and all my love there, and (it thus seems to me) it was now autonomous &mdash; a living and vigorous thing &mdash; which no longer needed me to mother it. In that respect, I left in a perfectly tranquil spirit. I had no doubts that these things written and non-written that I left behind, I left in good hands, which would know to look after that which they deployed, which they would grow and multiply following their proper nature of living and vigorous things.
+
+During these fifteen years of intense mathematical work, had hatched, matured and grown in me a vast _unifying vision_, incarnating in some very simple _leading ideas_ [fr: idées-force]. The vision was that of an "arithmetic geometry", a synthesis of topology, geometry (algebraic and analytic), and arithmetic, of which I had found a first embryo in the Weil conjectures. It is this which has been my principal source of inspiration in these years, which for me are those above all when I brought out the master ideas on this new geometry, and when I shaped a few of the principal tools. This vision and its leading ideas became second nature for me. (And after have ceased all contact with those for nearly fifteen years, I note today that this "second nature" is still living in me!) They were for me so simple, and so evident, that it felt like "everyone in the world" assimilated and endorsed them along the way, at the same time as me. It is only recently, during these last months, that I have realized that neither the vision, nor its "leading ideas" which had been my constant guide, were to be found in written form among all letters of published texts, if it is not all in between the lines. And especially, that to communicate this vision which I had grown, and its leading ideas which support it, remains still today, twenty years after having reached full maturity, unknown to all. It is me, the worker, and the servant of these things which I have had the provilege to discover, who is also the only one in which they seem to be living.
+
+This and that tool which I have shaped, is used here and there to "fracture" a problem reputed to be difficult, like one would force a safe. The tool is apparently solid. However, I know in it another "force" than that of a crowbar. It makes a part of a Whole, like an element makes part of a field &mdash; a Whole from which it originates, which gives it its meaning and from which it draws force and life. You may use a bone (if it is big) to fracture a skull, everyone agrees on this. But this is not its true function, its reason for being. And I see these tools scattered by taking over one thing and the other, a bit like bones, carefully taken apart and cleaned, that they had been taken from a body &mdash; from a living body which they would pretend to ignore...
+
+
 
 [...]
 
