--- a/recoltes-et-semailles/part-0-letter/3.md
+++ b/recoltes-et-semailles/part-0-letter/3.md
@@ -3,14 +3,20 @@ It is time, I feel, to give some explanations: why I quit so abruptly a world in
 
 I talk here and there in Récoltes et Semailles of the episode of my departure, without stopping too much. The "departure" there appears rather like an important caesura in my life as a mathematician &mdash; it is in relation to this "point" that the events of my life as a mathematician constantly situate themselves, as "before" and "after". A shock of great force was needed to tear myself away from an environment where I was strongly rooted, and from a "trajectory" which had been heavily drawn. The shock came from the confrontation, in an environment with which I was strongly identified, with a certain form of corruption<sup>85</sup>(*), from which I had until then chosen to look away (by simply abstaining from participating). With the retreat, I realized that beyond the event, there was however a very profound force at work in me. It was an intense _need for internal renewal_. Such a renewal couldn't be accomplished and pursued in the tepid ambiance of the scientific drying oven of a high standard institution. Behind me, twenty years of intense mathematical creativity and exaggerated mathematical commitment &mdash; and, at the same time, twenty long years of spiritual stagnation, in "isolation" [fr: vase clos]... Without realizing, I choked &mdash; it is the air of the open sea that I needed! My providential "departure" marked the sudden end of a long stagnation, and a first step toward an equilibration of profound forces in my being, folded and aimed in a state of intense disequilibrium, frozen... The departure was, truly, a _fresh start_ [fr: nouveau départ] &mdash; the first step in a new voyage...
 
-Like I said, my mathematical passion was not put out, despite all this. It found expression in reflections which had remained sporadically, in ways very different from those that I had traced out "before". As for the _work_ that I left behind me, that "of before", as many published black on white as those, more essentially perhaps, that had still not found their way into writing or publication &mdash; it may well seem, and indeed it seems to me, that it was detached from me. Until last year, with Récoltes et Semailles, the idea never occured to be to "ask" as much as a little about the scattered echoes that had come back to me, here and there. I knew well that all that which I had done in math, and in particular, during my "geometric" period from 1955 to 1970, were things that _had_ to be done &mdash; and the things which I had seen or interview, were things that _had_ to appear, that _needed_ to be drawn into broad daylight. And also, that the work which I'd done, and that which I'd had made, was a job well done, a work into which I had put myself entirely. I put all my force and all my love there, and (it thus seems to me) it was now autonomous &mdash; a living and vigorous thing &mdash; which no longer needed me to mother it. In that respect, I left in a perfectly tranquil spirit. I had no doubts that these things written and non-written that I left behind, I left in good hands, which would know to look after that which they deployed, which they would grow and multiply following their proper nature of living and vigorous things.
+Like I said, my mathematical passion was not put out, despite all this. It found expression in reflections which had remained sporadically, in ways very different from those that I had traced out "before". As for the _work_ that I left behind me, that "of before", as many published black on white as those, more essentially perhaps, that had still not found their way into writing or publication &mdash; it may well seem, and indeed it seems to me, that it was detached from me. Until last year, with Récoltes et Semailles, the idea never occured to be to "ask" as much as a little about the scattered echoes that had come back to me, here and there. I knew well that all that which I had done in math, and in particular, during my "geometric" period from 1955 to 1970, were things that _had_ to be done &mdash; and the things which I had seen or interview, were things that _had_ to appear, that _needed_ to be drawn into broad daylight. And also, that the work which I'd done, and that which I'd had made, was a job well done, a work into which I had put myself entirely. I put all my force and all my love there, and (it thus seems to me) it was now autonomous &mdash; a living and vigorous thing &mdash; which no longer needed me to mother it. In that respect, I left with perfect peace of mind. I had no doubts that these things written and non-written that I left behind, I left in good hands, which would know to look after that which they deployed, which they would grow and multiply following their proper nature of living and vigorous things.
 
 During these fifteen years of intense mathematical work, had hatched, matured and grown in me a vast _unifying vision_, incarnating in some very simple _leading ideas_ [fr: idées-force]. The vision was that of an "arithmetic geometry", a synthesis of topology, geometry (algebraic and analytic), and arithmetic, of which I had found a first embryo in the Weil conjectures. It is this which has been my principal source of inspiration in these years, which for me are those above all when I brought out the master ideas on this new geometry, and when I shaped a few of the principal tools. This vision and its leading ideas became second nature for me. (And after have ceased all contact with those for nearly fifteen years, I note today that this "second nature" is still living in me!) They were for me so simple, and so evident, that it felt like "everyone in the world" assimilated and endorsed them along the way, at the same time as me. It is only recently, during these last months, that I have realized that neither the vision, nor its "leading ideas" which had been my constant guide, were to be found in written form among all letters of published texts, if it is not all in between the lines. And especially, that to communicate this vision which I had grown, and its leading ideas which support it, remains still today, twenty years after having reached full maturity, unknown to all. It is me, the worker, and the servant of these things which I have had the provilege to discover, who is also the only one in which they seem to be living.
 
 This and that tool which I have shaped, is used here and there to "fracture" a problem reputed to be difficult, like one would force a safe. The tool is apparently solid. However, I know in it another "force" than that of a crowbar. It makes a part of a Whole, like an element makes part of a field &mdash; a Whole from which it originates, which gives it its meaning and from which it draws force and life. You may use a bone (if it is big) to fracture a skull, everyone agrees on this. But this is not its true function, its reason for being. And I see these tools scattered by taking over one thing and the other, a bit like bones, carefully taken apart and cleaned, that they had been taken from a body &mdash; from a living body which they would pretend to ignore...
 
+This which I say here in carefully weighed terms, at the end of a long reflection, had to be perceived by me little by little and in a diffuse fashion, over the years, at an informulated level which still doesn't look to take form in a thought and in conscious images, and by clearly articulated utterances. I decided that this past, in the end, doesn't concern me. The echoes which reached me from afar, all filtered as they were, were however eloquent, for little as I stopped so slightly. I grew into a worker among others, busying himself with five or six "building sites"<sup>86</sup>(*) in full activity &mdash; a more experienced worker perhaps, an elder who not so long ago worked alone in these same sites, for long years, before a welcome responsibility came; an elder, may so be, but deep down not different from others<sup>[?]</sup>. And now, this one gone, it is like an enterprise of masonry which would have declared bankruptcy, following the unexpected death of the employer: overnight, without speaking, the building sites would have been deserted. The "workers" left, each taking under their arm little odds and ends which they thought would find use by them. The cash register was divided, and there was no longer any reason henceforth to continue to wear oneself out at work...
 
+There it is, again, a formulation which decanted itself by a reflection and an examination going on for over a year. But surely, it was a thing already perceived "somewhere", since the first years after my departure. Putting aside the works of Deligne on the absolute values of eigenvalues of Frobenius (the "prestigious question", as I recently understood<sup>[called?]</sup> it...) &mdash; when it arrives for me from time to time to meet one of my loved ones from days gone by, with whom I worked on the same sites, and that I ask them "and...?", it is alwys the same eloquent gesture, the arms in the air as if asking for mercy... Visibly, all were occupied on things more important than those which were dear to my heart &mdash; and visibly, also, while all busied themselves with occupied and important appearances, nothing big was being done. The essential had disappeared &mdash; a _unity_ which gave them meaning to partial tasks, and a _heat_ also, I believe. There remained a scattering of things detached from a whole, each in its corner brooding their little nest egg, or making it grow as best as it can.
+
+Even though I would have liked to defend myself, it pained me of course to foresee that all would stop dead; to no longer hear about motifs, or about toposes, or about the six operations, or about the De Rham coefficients, or about those of Hodge, or about the "mysterious functor" which had to connect them together, to a common range, around the De Rham coefficients, the $\ell$-adic coefficients for all prime numbers, or about crystals (if it is not to learn that they are always at the same point), or about the "standard conjectures" and others that I have brought out and which, evidently, represented crucial questions. Even the vast foundational work commenced with the Elements of Algebraic Geometry (with the tireless assistance of Dieudonné), which would have almost sufficed to continue [...]
 
 [...]
 
 <sup>85</sup>(*)
+
+<sup>86</sup>(*)
