--- a/recoltes-et-semailles/part-0-letter/3.md
+++ b/recoltes-et-semailles/part-0-letter/3.md
@@ -15,7 +15,9 @@ There it is, again, a formulation which decanted itself by a reflection and an e
 
 Even though I would have liked to defend myself, it pained me of course to foresee that all would stop dead; to no longer hear about motifs, or about toposes, or about the six operations, or about the De Rham coefficients, or about those of Hodge, or about the "mysterious functor" which had to connect them together, to a common range, around the De Rham coefficients, the $\ell$-adic coefficients for all prime numbers, or about crystals (if it is not to learn that they are always at the same point), or about the "standard conjectures" and others that I have brought out and which, evidently, represented crucial questions. Even the vast foundational work commenced with the Elements of Algebraic Geometry (with the tireless assistance of Dieudonné), which would have almost sufficed to continue [...]
 
-[...]
+I have not been able to hinder myself, once again, from following up with fully conscious images, that emerged and arose by virtue of a work of reflection. But there is no doubt to me that these images must have been already present in one form or another, in the profound layers of my being. I must have already felt the insidious reality of a _Burial_ of my work at the same time as of my person, which imposed itself on me suddenly, with an irrecusable force and with the very name, "The Burial", April 19 of last year. At a conscious level, on the other hand, I have hardly thought about being offended or even distressed. After all, "close" to recently or not, it was only about the interest, in what to occupy one's time with. If that which seemed to motivate or inspire him not so long ago doesn't inspire him anymore, this is his business, and not mine. If the same thing seemed to happen, in perfect ensemble, with all my ex-students without exception, this was still the business of each of them separately and I had other things to worry about than to go searching [...]
+
+---
 
 <sup>85</sup>(*)
 
