begin section 6 of the letter

--- a/recoltes-et-semailles/part-0-letter/5.md
+++ b/recoltes-et-semailles/part-0-letter/5.md
@@ -3,7 +3,7 @@ I believe that I've more or less finished the tour, there, of the context in whi
 
 ---
 
-<sup>91</sup>(*) Citation taken from the note "La mélodie au tombeau &mdash; ou la suffisance" (n&deg; 167).
+<sup>91</sup>(*) Citation taken from the note ["The melody at the tomb &mdash; or the self-importance"](../part-4-dance/3.md) (n&deg; 167).
 
 <sup>92</sup>(**)
 
