--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -2,7 +2,9 @@
 <div style="text-align: right"><i>June 1985</i></div>
 The preceeding pages were written thanks to a short "empty moment", last month. Meanwhile, I finally finished making the final touches on the "Four Operations" (the fourth part of Harvests and Sowings) &mdash; it only remains for me to end this letter or "pre-letter" (which also appears to be taking prohibitive dimensions...) so that all will be finally ready for typing [(?) fr: frappe] and duplication. I couldn't believe it, because, almost a year and a half I've been "close to finishing" these famous notes!
 
-When starting on this "introduction" slightly unusual in nature for a mathematical work, in the month of February of last year (and already the year before that, in the month of June), there were (I believe) three kinds of things above all on which I desired to express myself. First of all, I wanted to explain my intentions on returning to mathematical activity, and the spirit in which I had written the first volume of "Pursuing Stacks" (that I came to declare as finished), and also the spirit in which I intended to pursue a voyage of prospection and still vaster mathematical discovery, with the "Réflections". It would no longer do for me, from now on, to present meticulous foundations to the nines for some new mathematical universe in childbed. This would rather be a "logbook", where the work would be pursued from day to day, without hiding anything and like it is _really_ pursued, with its failures and its messes, its insistant backtracking and also its sudden leaps forward &mdash; a work pulled irresistibly forward day after day (and in spite of incidents and innumerable unforeseen events), as if by an invisible thread &mdash; by some elusive vision, tenacious and trustworthy. A work often feeling its way, especially in its "sensitive moments" when there crops up, barely parceptible, some intuition still nameless and faceless; or at the beginning of some new travel, [...]
+When starting on this "introduction" slightly unusual in nature for a mathematical work, in the month of February of last year (and already the year before that, in the month of June), there were (I believe) three kinds of things above all on which I desired to express myself. First of all, I wanted to explain my intentions on returning to mathematical activity, and the spirit in which I had written the first volume of "Pursuing Stacks" (that I came to declare as finished), and also the spirit in which I intended to pursue a voyage of prospection and still vaster mathematical discovery, with the "Réflections". It would no longer do for me, from now on, to present meticulous foundations to the nines for some new mathematical universe in childbed. This would rather be a "logbook", where the work would be pursued from day to day, without hiding anything and like it is _really_ pursued, with its failures and its messes, its insistant backtracking and also its sudden leaps forward &mdash; a work pulled irresistibly forward day after day (and in spite of incidents and innumerable unforeseen events), as if by an invisible thread &mdash; by some elusive vision, tenacious and trustworthy. A work often feeling its way, especially in its "sensitive moments" when there crops up, barely parceptible, some intuition still nameless and faceless; or at the beginning of some new travel, [...] pursuit of some first ideas and intuitions, often elusive and reluctant to let themselves be grasped by the mesh of language, as it is precisely the language adequate for grasping them delicately which is often still lacking. It is such a language, above all else, which is therefore to be condensed out of an apparent nothingness of impalpable mist. This which is still only foreseen, before being only vaguely glimpsed and still less "seen" and pinpointed, settles down little by little from the imponderable, emerges from its cloak of darkness and mist to take form and flesh and weight...
+
+It is this part of the work, bad looking and not to say (often times) crappy, which is also the most delicate and essential part &mdash; [...]
 
 [...]
 
